# k8sguard

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  eval.py  models.py  pyproject.toml  train.py
deploy/: setup.sh  start.sh  start_env_servers.sh  stop_env_servers.sh  train_loop.sh
docs/: sample-transcripts.md  training-log.md
server/: __init__.py  app.py  constants.py  judge.py  k8s_backend.py  k8s_commands.py  k8sguard_environment.py  llm_client.py  scanners.py  scenario_generator.py  vulnerability_injectors.py
